# dop-analysis

./: README.md
config/: testing_input.csv
dop_analysis/: anchorpairing.h  axessetting.cpp  calculate_dop.cpp  chartwidget.h  dataload.cpp  dataload.h  datasave.cpp  datasave.h  dop_save.cpp  dop_save.h  friss_filter.cpp  heatmap.cpp  polygon.h  scrollparam.cpp
src/: CMakeLists.txt  anchoradd.cpp  anchoradd.h  anchorpairing.cpp  axessetting.h  calculate_dop.cpp  calculate_dop.h  calculatepoints.cpp  calculatepoints.h  chartwidget.cpp  colorbarwidget.cpp  colorbarwidget.h  dopsave.cpp  dopsave.h  friss_filter.h  heatmap.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  polygon.cpp  scrollparam.h
